(images) Fix z-index of mobile menu

--- a/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
+++ b/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
@@ -492,6 +492,7 @@
       &::ng-deep {
         astrobin-mobile-menu {
           top: .3rem;
+          z-index: 1031;
         }
       }
     }
